Bugfix Blockung importieren: Einlesen der Zip-Datei und extrahieren der Dateien korrigiert